--- a/index.html
+++ b/index.html
@@ -1,7 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Workout Plan</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; padding: 20px; }
+        .container { max-width: 800px; margin: auto; }
+        .workout-section { margin-bottom: 30px; padding: 15px; border: 1px solid #ddd; border-radius: 8px; }
+        .video-container { text-align: center; margin-top: 10px; }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="container">
+        <h1>Workout Plan</h1>
+        
+        <div class="workout-section">
+            <h2>Workout Name</h2>
+            <p><strong>Explanation:</strong> Detailed explanation of the workout goes here.</p>
+            <p><strong>Sets & Reps:</strong> 3 sets of 10 reps</p>
+            <p><strong>Rest Time:</strong> 60 seconds</p>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <p><strong>Alternative Workouts:</strong> Alternative exercises for this workout.</p>
+        </div>
+        
+        <div class="workout-section">
+            <h2>Workout Name 2</h2>
+            <p><strong>Explanation:</strong> Another workout description here.</p>
+            <p><strong>Sets & Reps:</strong> 4 sets of 12 reps</p>
+            <p><strong>Rest Time:</strong> 45 seconds</p>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <p><strong>Alternative Workouts:</strong> More exercise alternatives.</p>
+        </div>
+    </div>
 </body>
 </html>
